--- a/tests/sendevent.html
+++ b/tests/sendevent.html
@@ -93,6 +93,13 @@
     </div>
 
     <div class="card">
+        <label class="label" for="wp-user-id">WordPress userId</label>
+        <input id="wp-user-id" value="123" placeholder="z.B. 123 oder user@example.com" />
+        <button id="wp-ensure-key-btn">WP-Key sicherstellen (userId -&gt; pubkey)</button>
+        <pre id="wp-result"></pre>
+    </div>
+
+    <div class="card">
         <label class="label" for="content">Event-Content (Kind 1)</label>
         <textarea id="content">Hallo von sendevent.html</textarea>
         <button id="send-btn" disabled>Event senden</button>
@@ -119,6 +126,9 @@
         const signerFrame = document.getElementById("signer-frame");
         const connectBtn = document.getElementById("connect-btn");
         const sendBtn = document.getElementById("send-btn");
+        const wpUserIdInput = document.getElementById("wp-user-id");
+        const wpEnsureKeyBtn = document.getElementById("wp-ensure-key-btn");
+        const wpResultEl = document.getElementById("wp-result");
         const statusEl = document.getElementById("status");
         const userEl = document.getElementById("user");
         const resultEl = document.getElementById("result");
@@ -311,6 +321,74 @@
 
             applyConnectionInfo(data.payload);
             setStatus("Signer bereit (Bridge).");
+        }
+
+        function requestWpUserKeyFromIframe(userId, timeoutMs = 6000) {
+            return new Promise((resolve, reject) => {
+                if (!embedSignerInput.checked || !signerFrame.contentWindow) {
+                    reject(new Error("Signer-iframe nicht aktiv."));
+                    return;
+                }
+                if (!signerFrameOrigin) {
+                    reject(new Error("Signer-Origin unbekannt."));
+                    return;
+                }
+
+                const trimmedUserId = String(userId || "").trim();
+                if (!trimmedUserId) {
+                    reject(new Error("Bitte userId eingeben."));
+                    return;
+                }
+
+                const requestId = `wp_${Date.now().toString(36)}_${Math.random().toString(36).slice(2, 9)}`;
+                const timeout = setTimeout(() => {
+                    window.removeEventListener("message", onMessage);
+                    reject(new Error("Keine Antwort vom Signer auf wp-ensure-user-key."));
+                }, timeoutMs);
+
+                function onMessage(event) {
+                    if (event.origin !== signerFrameOrigin) return;
+                    const data = event.data;
+                    if (!data || data.source !== BRIDGE_SOURCE) return;
+                    if (data.type === "frame-size") {
+                        applySignerFrameHeight(data.payload?.height);
+                        return;
+                    }
+                    if (data.type !== "wp-user-key-result") return;
+                    if (data.payload?.requestId !== requestId) return;
+
+                    clearTimeout(timeout);
+                    window.removeEventListener("message", onMessage);
+                    if (!data.payload?.ok) {
+                        reject(new Error(data.payload?.error || "WP-Key konnte nicht erstellt werden."));
+                        return;
+                    }
+                    resolve(data.payload);
+                }
+
+                window.addEventListener("message", onMessage);
+                signerFrame.contentWindow.postMessage(
+                    {
+                        source: BRIDGE_SOURCE,
+                        type: "wp-ensure-user-key",
+                        payload: { requestId, userId: trimmedUserId }
+                    },
+                    signerFrameOrigin
+                );
+            });
+        }
+
+        async function ensureWpKeyForUser() {
+            try {
+                wpResultEl.textContent = "Fordere WP-Key vom Signer an...";
+                const result = await requestWpUserKeyFromIframe(wpUserIdInput.value, 7000);
+                wpResultEl.textContent = JSON.stringify(result, null, 2);
+                const mode = result.existed ? "bereits vorhanden" : "neu erzeugt";
+                setStatus(`WP-Key ${mode}: ${result.pubkey.slice(0, 12)}...`);
+            } catch (err) {
+                wpResultEl.textContent = `Fehler: ${err.message}`;
+                setStatus(`WP-Key Fehler: ${err.message}`, true);
+            }
         }
 
         function withTimeout(promise, ms, stepName) {
@@ -530,6 +608,7 @@
 
         connectBtn.addEventListener("click", connectSigner);
         sendBtn.addEventListener("click", sendEvent);
+        wpEnsureKeyBtn.addEventListener("click", ensureWpKeyForUser);
         signerUrlInput.addEventListener("change", refreshSignerFrame);
         syncIframeBtn.addEventListener("click", async () => {
             try {
